# Zephyr-customRingBuffer

./: CMakeLists.txt  Kconfig  README.md  TESTED_FUNCTIONALITIES.md  prj.conf
include/: ema.h  ring_buffer.h
lib/: ema.c  ring_buffer.c
src/: main.c
tests/ema/: CMakeLists.txt  testcase.yaml
tests/ema/src/: test_ema.c
tests/ring_buffer/: CMakeLists.txt  prj.conf  testcase.yaml
tests/ring_buffer/src/: test_ring_buffer.c
