cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(ring_buffer_tests)

target_sources(app PRIVATE
    src/test_ring_buffer.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/ring_buffer.c
)

target_include_directories(app PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../../include
)